--- a/Python/PythonStatistics/NHAMEcase.ipynb
+++ b/Python/PythonStatistics/NHAMEcase.ipynb
@@ -415,49 +415,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'Man'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/home/luni/Documents/Studies/Python/PythonStatistics/NHAMEcase.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/luni/Documents/Studies/Python/PythonStatistics/NHAMEcase.ipynb#ch0000009?line=1'>2</a>\u001b[0m nhanes[\u001b[39m\"\u001b[39m\u001b[39mage_group\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mcut(nhanes\u001b[39m.\u001b[39mRIDAGEYR, [\u001b[39m30\u001b[39m,\u001b[39m40\u001b[39m])\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/luni/Documents/Studies/Python/PythonStatistics/NHAMEcase.ipynb#ch0000009?line=3'>4</a>\u001b[0m nhanes[\u001b[39m\"\u001b[39m\u001b[39mMartial_Status\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m nhanes\u001b[39m.\u001b[39mDMDMARTL\u001b[39m.\u001b[39mreplace({\u001b[39m1\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mMarried\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m2\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mWidowed\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m3\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mDivorced\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m4\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mSeparated\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m5\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mNever Married\u001b[39m\u001b[39m\"\u001b[39m, \n\u001b[1;32m      <a href='vscode-notebook-cell:/home/luni/Documents/Studies/Python/PythonStatistics/NHAMEcase.ipynb#ch0000009?line=4'>5</a>\u001b[0m                                        \u001b[39m6\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mLiving with partner\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m99\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mDon\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt know\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m77\u001b[39m:\u001b[39m\"\u001b[39m\u001b[39mRefused\u001b[39m\u001b[39m\"\u001b[39m})\u001b[39m.\u001b[39mfillna(\u001b[39m\"\u001b[39m\u001b[39mMissing\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/luni/Documents/Studies/Python/PythonStatistics/NHAMEcase.ipynb#ch0000009?line=6'>7</a>\u001b[0m nhanes\u001b[39m.\u001b[39;49mgroupby(\u001b[39m\"\u001b[39;49m\u001b[39mMan\u001b[39;49m\u001b[39m\"\u001b[39;49m)[\u001b[39m\"\u001b[39m\u001b[39mMartial_Status\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mvalue_counts()\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/frame.py:7718\u001b[0m, in \u001b[0;36mDataFrame.groupby\u001b[0;34m(self, by, axis, level, as_index, sort, group_keys, squeeze, observed, dropna)\u001b[0m\n\u001b[1;32m   7713\u001b[0m axis \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_axis_number(axis)\n\u001b[1;32m   7715\u001b[0m \u001b[39m# https://github.com/python/mypy/issues/7642\u001b[39;00m\n\u001b[1;32m   7716\u001b[0m \u001b[39m# error: Argument \"squeeze\" to \"DataFrameGroupBy\" has incompatible type\u001b[39;00m\n\u001b[1;32m   7717\u001b[0m \u001b[39m# \"Union[bool, NoDefault]\"; expected \"bool\"\u001b[39;00m\n\u001b[0;32m-> 7718\u001b[0m \u001b[39mreturn\u001b[39;00m DataFrameGroupBy(\n\u001b[1;32m   7719\u001b[0m     obj\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m,\n\u001b[1;32m   7720\u001b[0m     keys\u001b[39m=\u001b[39;49mby,\n\u001b[1;32m   7721\u001b[0m     axis\u001b[39m=\u001b[39;49maxis,\n\u001b[1;32m   7722\u001b[0m     level\u001b[39m=\u001b[39;49mlevel,\n\u001b[1;32m   7723\u001b[0m     as_index\u001b[39m=\u001b[39;49mas_index,\n\u001b[1;32m   7724\u001b[0m     sort\u001b[39m=\u001b[39;49msort,\n\u001b[1;32m   7725\u001b[0m     group_keys\u001b[39m=\u001b[39;49mgroup_keys,\n\u001b[1;32m   7726\u001b[0m     squeeze\u001b[39m=\u001b[39;49msqueeze,  \u001b[39m# type: ignore[arg-type]\u001b[39;49;00m\n\u001b[1;32m   7727\u001b[0m     observed\u001b[39m=\u001b[39;49mobserved,\n\u001b[1;32m   7728\u001b[0m     dropna\u001b[39m=\u001b[39;49mdropna,\n\u001b[1;32m   7729\u001b[0m )\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/groupby/groupby.py:882\u001b[0m, in \u001b[0;36mGroupBy.__init__\u001b[0;34m(self, obj, keys, axis, level, grouper, exclusions, selection, as_index, sort, group_keys, squeeze, observed, mutated, dropna)\u001b[0m\n\u001b[1;32m    879\u001b[0m \u001b[39mif\u001b[39;00m grouper \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    880\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mpandas\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcore\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgroupby\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgrouper\u001b[39;00m \u001b[39mimport\u001b[39;00m get_grouper\n\u001b[0;32m--> 882\u001b[0m     grouper, exclusions, obj \u001b[39m=\u001b[39m get_grouper(\n\u001b[1;32m    883\u001b[0m         obj,\n\u001b[1;32m    884\u001b[0m         keys,\n\u001b[1;32m    885\u001b[0m         axis\u001b[39m=\u001b[39;49maxis,\n\u001b[1;32m    886\u001b[0m         level\u001b[39m=\u001b[39;49mlevel,\n\u001b[1;32m    887\u001b[0m         sort\u001b[39m=\u001b[39;49msort,\n\u001b[1;32m    888\u001b[0m         observed\u001b[39m=\u001b[39;49mobserved,\n\u001b[1;32m    889\u001b[0m         mutated\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmutated,\n\u001b[1;32m    890\u001b[0m         dropna\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdropna,\n\u001b[1;32m    891\u001b[0m     )\n\u001b[1;32m    893\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj \u001b[39m=\u001b[39m obj\n\u001b[1;32m    894\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maxis \u001b[39m=\u001b[39m obj\u001b[39m.\u001b[39m_get_axis_number(axis)\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/groupby/grouper.py:882\u001b[0m, in \u001b[0;36mget_grouper\u001b[0;34m(obj, key, axis, level, sort, observed, mutated, validate, dropna)\u001b[0m\n\u001b[1;32m    880\u001b[0m         in_axis, level, gpr \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m, gpr, \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    881\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 882\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(gpr)\n\u001b[1;32m    883\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(gpr, Grouper) \u001b[39mand\u001b[39;00m gpr\u001b[39m.\u001b[39mkey \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    884\u001b[0m     \u001b[39m# Add key to exclusions\u001b[39;00m\n\u001b[1;32m    885\u001b[0m     exclusions\u001b[39m.\u001b[39madd(gpr\u001b[39m.\u001b[39mkey)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'Man'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#4\n",
     "nhanes[\"age_group\"] = pd.cut(nhanes.RIDAGEYR, [30,40])\n",
     "\n",
     "nhanes[\"Martial_Status\"] = nhanes.DMDMARTL.replace({1: \"Married\", 2: \"Widowed\", 3: \"Divorced\", 4: \"Separated\", 5: \"Never Married\", \n",
     "                                       6: \"Living with partner\", 99: \"Don't know\", 77:\"Refused\"}).fillna(\"Missing\")\n",
+    "                                       \n",
+    "nhanes[\"Gender\"] = nhanes.RIAGENDR.replace({1: \"Male\", 2: \"Female\"})\n",
+    "nhanes[\"MS_30_40\"] = nhanes.age_group.dropna()\n",
     "\n",
-    "nhanes.groupby(\"Man\")[\"Martial_Status\"].value_counts()"
+    "nhanes.groupby(\"Gender\")[\"Martial_Status\"].value_counts()                                    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Gender          \n",
-       "Female  (30, 40]    474\n",
-       "Male    (30, 40]    458\n",
+       "Gender  Martial_Status               \n",
+       "Female  Divorced             (30, 40]     43\n",
+       "        Living with partner  (30, 40]     57\n",
+       "        Married              (30, 40]    258\n",
+       "        Missing              (30, 40]      0\n",
+       "        Never Married        (30, 40]     97\n",
+       "        Refused              (30, 40]      0\n",
+       "        Separated            (30, 40]     17\n",
+       "        Widowed              (30, 40]      2\n",
+       "Male    Divorced             (30, 40]     24\n",
+       "        Living with partner  (30, 40]     72\n",
+       "        Married              (30, 40]    258\n",
+       "        Missing              (30, 40]      0\n",
+       "        Never Married        (30, 40]     89\n",
+       "        Refused              (30, 40]      1\n",
+       "        Separated            (30, 40]     12\n",
+       "        Widowed              (30, 40]      2\n",
        "Name: MS_30_40, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +474,7 @@
     "nhanes[\"Gender\"] = nhanes.RIAGENDR.replace({1: \"Male\", 2: \"Female\"})\n",
     "nhanes[\"MS_30_40\"] = nhanes.age_group.dropna()\n",
     "\n",
-    "nhanes.groupby(\"Gender\")[\"MS_30_40\"].value_counts()\n"
+    "nhanes.groupby([\"Gender\",\"Martial_Status\"])[\"MS_30_40\"].value_counts()\n"
    ]
   }
  ],
