--- a/Python/PythonStatistics/NHAMEcase.ipynb
+++ b/Python/PythonStatistics/NHAMEcase.ipynb
@@ -415,15 +415,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Gender  Martial_Status     \n",
+       "Female  Married                1303\n",
+       "        Never Married           520\n",
+       "        Divorced                350\n",
+       "        Widowed                 296\n",
+       "        Living with partner     262\n",
+       "        Separated               118\n",
+       "        Refused                   1\n",
+       "Male    Married                1477\n",
+       "        Never Married           484\n",
+       "        Living with partner     265\n",
+       "        Divorced                229\n",
+       "        Widowed                 100\n",
+       "        Separated                68\n",
+       "        Refused                   1\n",
+       "Name: Martial_Status, dtype: int64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#4\n",
     "nhanes[\"age_group\"] = pd.cut(nhanes.RIDAGEYR, [30,40])\n",
     "\n",
     "nhanes[\"Martial_Status\"] = nhanes.DMDMARTL.replace({1: \"Married\", 2: \"Widowed\", 3: \"Divorced\", 4: \"Separated\", 5: \"Never Married\", \n",
-    "                                       6: \"Living with partner\", 99: \"Don't know\", 77:\"Refused\"}).fillna(\"Missing\")\n",
+    "                                       6: \"Living with partner\", 99: \"Don't know\", 77:\"Refused\"}).dropna()\n",
     "                                       \n",
     "nhanes[\"Gender\"] = nhanes.RIAGENDR.replace({1: \"Male\", 2: \"Female\"})\n",
     "nhanes[\"MS_30_40\"] = nhanes.age_group.dropna()\n",
@@ -433,35 +459,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Gender  Martial_Status               \n",
-       "Female  Divorced             (30, 40]     43\n",
-       "        Living with partner  (30, 40]     57\n",
-       "        Married              (30, 40]    258\n",
-       "        Missing              (30, 40]      0\n",
-       "        Never Married        (30, 40]     97\n",
-       "        Refused              (30, 40]      0\n",
-       "        Separated            (30, 40]     17\n",
-       "        Widowed              (30, 40]      2\n",
-       "Male    Divorced             (30, 40]     24\n",
-       "        Living with partner  (30, 40]     72\n",
-       "        Married              (30, 40]    258\n",
-       "        Missing              (30, 40]      0\n",
-       "        Never Married        (30, 40]     89\n",
-       "        Refused              (30, 40]      1\n",
-       "        Separated            (30, 40]     12\n",
-       "        Widowed              (30, 40]      2\n",
-       "Name: MS_30_40, dtype: int64"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Married                2780\n",
+      "Never Married          1004\n",
+      "Divorced                579\n",
+      "Living with partner     527\n",
+      "Widowed                 396\n",
+      "Separated               186\n",
+      "Refused                   2\n",
+      "Name: Martial_Status, dtype: int64\n",
+      "(30, 40]    932\n",
+      "Name: MS_30_40, dtype: int64\n"
+     ]
     }
    ],
    "source": [
@@ -469,12 +484,18 @@
     "nhanes[\"age_group\"] = pd.cut(nhanes.RIDAGEYR, [30,40])\n",
     "\n",
     "nhanes[\"Martial_Status\"] = nhanes.DMDMARTL.replace({1: \"Married\", 2: \"Widowed\", 3: \"Divorced\", 4: \"Separated\", 5: \"Never Married\", \n",
-    "                                       6: \"Living with partner\", 99: \"Don't know\", 77:\"Refused\"}).fillna(\"Missing\")\n",
+    "                                       6: \"Living with partner\", 99: \"Don't know\", 77:\"Refused\"}).dropna()\n",
     "\n",
     "nhanes[\"Gender\"] = nhanes.RIAGENDR.replace({1: \"Male\", 2: \"Female\"})\n",
     "nhanes[\"MS_30_40\"] = nhanes.age_group.dropna()\n",
     "\n",
-    "nhanes.groupby([\"Gender\",\"Martial_Status\"])[\"MS_30_40\"].value_counts()\n"
+    "x = nhanes.Martial_Status.value_counts()\n",
+    "y = nhanes.MS_30_40.value_counts()\n",
+    "print(x)\n",
+    "print(y)\n",
+    "#nhanes.groupby([\"Gender\",\"Martial_Status\"])[\"MS_30_40\"].value_counts()\n",
+    "#plt.figure(figsize=(12, 5))\n",
+    "#sns.boxplot(x=\"x\", y=\"MS_30_40\", hue=\"Gender\", data=nhanes)"
    ]
   }
  ],
